--- a/demo/build.gradle
+++ b/demo/build.gradle
@@ -1,4 +1,24 @@
-//add everything here
+plugins {
+    id 'java'
+}
+
+group = 'com.epam.demo'
+version = '1.3.5'
+
+java {
+    sourceCompatibility = JavaVersion.VERSION_1_8
+    targetCompatibility = JavaVersion.VERSION_1_8
+}
+
+repositories {
+    mavenLocal()
+    mavenCentral()
+}
+
+dependencies {
+    implementation project(':utils')
+    implementation project(path: ':utils')
+}
 
 test {
     useJUnitPlatform()
