--- a/utils/build.gradle
+++ b/utils/build.gradle
@@ -1,22 +1,22 @@
 plugins {
-    // id for library
-    // id for maven to publish jar to local repository
+    id 'application'
+    id 'maven-publish'
 }
 
 java {
-// provide sourceCompatibility
+    sourceCompatibility = JavaVersion.VERSION_1_8
 }
 
 repositories {
-// provide repository, where required dependencies are located
+    mavenCentral()
 }
 
 publishing {
     publications {
         maven(MavenPublication) {
-// provide groupId
-// provide artifactId
-// provide version
+            groupId = 'com.epam'
+            artifactId = 'utils'
+            version = '1.0'
 
             from components.java
         }
@@ -24,10 +24,17 @@ publishing {
 }
 
 //add Apache Apache Commons Lang 3.10 (or higher) dependency
+dependencies {
+    implementation ("org.apache.commons:commons-lang3:3.10")
+}
 
 jar {
     manifest {
         //provide manifest with such attributes as 'Implementation-Title', 'Implementation-Version'
+        attributes(
+                'Implementation-Title': 'utils',
+                'Implementation-Version': '1.3.5'
+        )
     }
 }
 
