--- a/utils/build.gradle
+++ b/utils/build.gradle
@@ -1,11 +1,11 @@
 plugins {
-    id 'application'
+    id 'java'
     id 'maven-publish'
-    id 'org.sonarqube'
 }
 
 java {
     sourceCompatibility = JavaVersion.VERSION_1_8
+    targetCompatibility = JavaVersion.VERSION_1_8
 }
 
 repositories {
@@ -15,27 +15,23 @@ repositories {
 publishing {
     publications {
         maven(MavenPublication) {
-            groupId = 'com.epam'
+            groupId = 'com.epam.utils'
             artifactId = 'utils'
-            version = '1.0'
+            version = '1.3.5'
 
             from components.java
         }
     }
 }
 
-//add Apache Apache Commons Lang 3.10 (or higher) dependency
 dependencies {
-    implementation ("org.apache.commons:commons-lang3:3.10")
+    implementation 'org.apache.commons:commons-lang3:3.10'
 }
 
 jar {
     manifest {
-        //provide manifest with such attributes as 'Implementation-Title', 'Implementation-Version'
-        attributes(
-                'Implementation-Title': 'utils',
+        attributes 'Implementation-Title': 'Gradle Utils',
                 'Implementation-Version': '1.3.5'
-        )
     }
 }
 
