--- a/demo/build.gradle
+++ b/demo/build.gradle
@@ -2,25 +2,14 @@ plugins {
     id 'java'
 }
 
-group = 'com.epam.demo'
-version = '1.3.5'
-
-java {
-    sourceCompatibility = JavaVersion.VERSION_1_8
-    targetCompatibility = JavaVersion.VERSION_1_8
-}
-
 repositories {
-    mavenLocal()
-    mavenCentral()
+    mavenCentral() // You can use Maven Central repository for JUnit Jupiter
 }
 
 dependencies {
-    implementation project(':utils')
+    implementation 'org.junit.jupiter:junit-jupiter:5.8.1'
 }
 
 test {
     useJUnitPlatform()
 }
-
-compileJava {}.dependsOn(':utils:publishToMavenLocal')
