--- a/utils/build.gradle
+++ b/utils/build.gradle
@@ -1,42 +1,37 @@
 plugins {
-    id 'java'
-    id 'maven-publish'
+    id 'java-library' // id for library
+    id 'maven-publish' // id for maven to publish jar to the local repository
 }
 
 java {
-    sourceCompatibility = JavaVersion.VERSION_1_8
-    targetCompatibility = JavaVersion.VERSION_1_8
+    sourceCompatibility = JavaVersion.VERSION_1_8 // provide sourceCompatibility
 }
 
 repositories {
-    mavenCentral()
+    mavenCentral() // provide repository, where required dependencies are located
+}
+
+dependencies {
+    implementation 'org.apache.commons:commons-lang3:3.10' // add Apache Commons Lang 3.10 (or higher) dependency
 }
 
 publishing {
     publications {
         maven(MavenPublication) {
-            groupId = 'com.epam.utils'
-            artifactId = 'utils'
-            version = '1.3.5'
+            groupId = 'com.example.utils' // provide groupId
+            artifactId = 'utils' // provide artifactId
+            version = '1.3.5' // provide version
 
             from components.java
         }
     }
 }
 
-dependencies {
-    implementation 'org.apache.commons:commons-lang3:3.10'
-}
-
 jar {
     manifest {
-        attributes 'Implementation-Title': 'Gradle Utils',
+        attributes(
+                'Implementation-Title': 'utils',
                 'Implementation-Version': '1.3.5'
+        )
     }
 }
-
-test {
-    useJUnitPlatform()
-}
-
-publishMavenPublicationToMavenLocal {}.mustRunAfter('build')
