--- a/utils/build.gradle
+++ b/utils/build.gradle
@@ -13,6 +13,8 @@ repositories {
 
 dependencies {
     implementation 'org.apache.commons:commons-lang3:3.10' // add Apache Commons Lang 3.10 (or higher) dependency
+    implementation 'org.sonarsource.scanner.gradle:sonarqube-gradle-plugin:3.3'
+    testImplementation 'org.junit.jupiter:junit-jupiter-params'
 }
 
 publishing {
