fix: repair build 3

--- a/utils/build.gradle
+++ b/utils/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'java-library' // id for library
     id 'maven-publish' // id for maven to publish jar to the local repository
+    id 'org.sonarqube' version '3.3'
 }
 
 java {
@@ -20,7 +21,7 @@ dependencies {
 publishing {
     publications {
         maven(MavenPublication) {
-            groupId = 'com.example.utils' // provide groupId
+            groupId = 'com.epam.utils' // provide groupId
             artifactId = 'utils' // provide artifactId
             version = '1.3.5' // provide version
 
