--- a/demo/build.gradle
+++ b/demo/build.gradle
@@ -1,5 +1,7 @@
 plugins {
     id 'java'
+    id 'org.sonarqube' version '3.3'
+
 }
 
 repositories {
@@ -8,6 +10,7 @@ repositories {
 }
 
 dependencies {
+    implementation 'com.epam.utils:utils:1.3.5'
     implementation 'org.apache.commons:commons-lang3:3.10'
     implementation 'org.sonarsource.scanner.gradle:sonarqube-gradle-plugin:3.3'
     implementation 'org.junit.jupiter:junit-jupiter:5.8.1'
