--- a/demo/build.gradle
+++ b/demo/build.gradle
@@ -1,28 +1,12 @@
-plugins {
-    id 'java'
-    id 'org.sonarqube' version '3.3'
-
-}
+group = 'com.epam'
+version = '1.0'
 
 repositories {
-    mavenCentral() // You can use Maven Central repository for JUnit Jupiter
-    mavenLocal()
+    mavenCentral()
 }
 
 dependencies {
-    implementation 'com.epam.utils:utils:1.3.5'
-    implementation 'org.apache.commons:commons-lang3:3.10'
-    implementation 'org.sonarsource.scanner.gradle:sonarqube-gradle-plugin:3.3'
-    implementation 'org.junit.jupiter:junit-jupiter:5.8.1'
-}
-
-jar {
-    manifest {
-        attributes(
-                'Implementation-Title': 'demo',
-                'Implementation-Version': '1.0.0'
-        )
-    }
+    implementation project(':utils')
 }
 
 test {
