--- a/utils/build.gradle
+++ b/utils/build.gradle
@@ -1,40 +1,46 @@
 plugins {
-    id 'java-library' // id for library
-    id 'maven-publish' // id for maven to publish jar to the local repository
-    id 'org.sonarqube' version '3.3'
+    id 'java-library'
+    id 'maven-publish'
 }
 
 java {
-    sourceCompatibility = JavaVersion.VERSION_1_8 // provide sourceCompatibility
+    sourceCompatibility = 8
 }
+
+group = 'com.epam'
+version = '1.3.5'
 
 repositories {
-    mavenCentral() // provide repository, where required dependencies are located
-}
-
-dependencies {
-    implementation 'org.apache.commons:commons-lang3:3.10' // add Apache Commons Lang 3.10 (or higher) dependency
-    implementation 'org.sonarsource.scanner.gradle:sonarqube-gradle-plugin:3.3'
-    testImplementation 'org.junit.jupiter:junit-jupiter-params'
+    mavenCentral()
 }
 
 publishing {
     publications {
         maven(MavenPublication) {
-            groupId = 'com.epam.utils' // provide groupId
-            artifactId = 'utils' // provide artifactId
-            version = '1.3.5' // provide version
+            groupId = 'com.epam'
+            artifactId = 'utils'
+            version = '1.3.5'
 
             from components.java
         }
     }
 }
 
+dependencies {
+    implementation 'org.apache.commons:commons-lang3:3.10'
+}
+
 jar {
     manifest {
         attributes(
-                'Implementation-Title': 'utils',
-                'Implementation-Version': '1.3.5'
+                "Implementation-Title": "utils",
+                "Implementation-Version": "1.3.5"
         )
     }
 }
+
+test {
+    useJUnitPlatform()
+}
+
+publishMavenPublicationToMavenLocal {}.mustRunAfter('build')
